# quantforge-ai

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RULESET_CANARY_ONLY.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements-dev.in  requirements.in
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release-candidate.yml  reproducibility.yml  security.yml
audit/: BUILD_WEEK_SUBMISSION_VERIFICATION_2026-07-22.md  phase1_independent_audit.json  phase1_independent_audit.md  v0.1.0_post_release_verification.json  v0.1.0_post_release_verification.md  v0.1.0_pre_tag_release_report.json  v0.1.0_pre_tag_release_report.md  v0.1.0_publication_candidate.json  v0.1.0_publication_candidate.md
docs/: ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  DETERMINISM.md  ENGINEERING_RULES.md  ENGINE_INTEGRATION_CONTRACT.md  EVALUATION_METHODOLOGY.md  EVIDENCE_MODEL.md  EXPERIMENT_CONSTITUTION.md  GOVERNANCE.md  GOVERNED_TRIBUNAL_DEMO.md  LIMITATIONS.md  LIVE_EVALUATION_RUNBOOK.md  MIGRATION_POLICY.md  OPENAI_PROVIDER_RUNBOOK.md  OPERATOR_RUNBOOK.md  PHASE_2B3_EVIDENCE_MANIFEST.json  PHASE_2B3_REQUIREMENT_MAP.md  PHASE_2B_PROVIDER_CONTRACT.md  PHASE_2B_THREAT_MODEL.md  RELEASE_NOTES_v0.1.0.md  RELEASE_POLICY.md  ROLE_CONTRACTS.md  SECURITY_MODEL.md  STORAGE_MODEL.md  THREAT_MODEL.md  VERDICT_POLICY.md
docs/adr/: 0001-code-driven-tribunal.md  0002-openai-agents-boundary.md  0003-canonical-json.md
examples/: run_all_demos.sh
scripts/: __init__.py  check_critical_coverage.py  check_repository.py  check_secrets.py  demo_package_smoke.py  generate_sbom.py  inspect_packages.py  quality.sh  release_candidate.py  run_judge_demo.sh  verify_determinism.py  verify_openai_provider_live.py  wheel_smoke.py
src/quantforge/: __init__.py  __main__.py  _version.py
src/quantforge/adapters/: __init__.py  governed_demo.py  mock.py
src/quantforge/adapters/fixtures/: __init__.py  fragile.json  governed_tribunal.json  inconclusive.json  provisional.json
src/quantforge/audit/: __init__.py  log.py
src/quantforge/cli/: __init__.py  main.py
src/quantforge/demo/: __init__.py  tribunal.py
src/quantforge/domain/: __init__.py  constitution.py  models.py
src/quantforge/engine/: __init__.py  base.py  local_cpp.py  trust.py
src/quantforge/evaluation/: __init__.py  adapters.py  live.py  models.py  persistence.py  providers.py  runner.py  scoring.py  suite.py
src/quantforge/evaluation/benchmarks/: __init__.py
src/quantforge/evaluation/benchmarks/v1/: __init__.py  cases.json  ground-truth.json  judge-subset.json  manifest.json  mock-responses.json
src/quantforge/evidence/: __init__.py  bundle.py  graph.py  ledger.py
src/quantforge/providers/: __init__.py  config.py  factory.py  failures.py  openai.py  strict_output.py
src/quantforge/roles/: __init__.py  chair.py  contracts.py  governance.py  orchestrator.py  requests.py  validation.py
src/quantforge/serialization/: __init__.py  canonical.py  export.py  safe_json.py
src/quantforge/storage/: __init__.py  base.py  export.py  service.py  sqlite.py
src/quantforge/verdict/: __init__.py  policy.py
src/quantforge/workflow/: __init__.py  demo.py  machine.py  rules.py
submission-materials/: ARCHITECTURE.md  DEVPOST.md  README.md  SUBMISSION_CHECKLIST.md  VERIFICATION_RECORD.md  VIDEO_PLAN.md
tests/: __init__.py  conftest.py
tests/fixtures/storage/: v1_provisional_case.json
tests/fixtures/storage/schema1/: metadata.json  provisional_case.sqlite3
tests/fixtures/storage/schema2/: metadata.json  provisional_case.sqlite3
tests/integration/: test_cpp_v1_adapter.py  test_demo_cli.py  test_evaluation_cli.py  test_evaluation_export.py  test_evaluation_full_suite.py  test_governed_tribunal_demo.py
tests/regression/: test_critical_coverage_gate.py  test_packaging_contract.py  test_protected_engine_boundary.py  test_publication_contract.py  test_regressions.py
tests/unit/: __init__.py  test_audit.py  test_constitution.py  test_durable_export.py  test_engine_adapter.py  test_evaluation_adapters.py  test_evaluation_model_invariants.py  test_evaluation_scoring.py  test_evaluation_suite.py  test_evidence.py  test_evidence_bundle.py  test_governed_orchestration.py  test_governed_request_validation.py  test_graph.py  test_live_evaluation_controls.py  test_provider_foundation.py  test_role_validation_security.py  test_roles.py  test_security_models.py  test_serialization.py  test_storage.py  test_value_types.py  test_verdict.py  test_workflow.py
