[build-system]
requires = ["editables==0.6", "hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "quantforge-ai"
dynamic = ["version"]
description = "Governed, deterministic research tribunal for quantitative claims"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Mrithunjoy Basumatary" }]
keywords = ["audit", "governance", "quantitative-research", "reproducibility"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = ["openai==2.46.0", "pydantic==2.13.4"]

[project.optional-dependencies]
dev = [
  "build==1.5.0",
  "cffconvert==2.0.0",
  "cyclonedx-python-lib==11.11.0",
  "editables==0.6",
  "hatchling==1.31.0",
  "mypy==2.3.0",
  "pip-audit==2.10.1",
  "pip-tools==7.6.0",
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "ruff==0.15.22",
]

[project.scripts]
quantforge = "quantforge.cli.main:main"

[tool.hatch.build]
exclude = ["/audit"]

[tool.hatch.version]
path = "src/quantforge/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/quantforge"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -ra"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "malicious: adversarial serialized-input and hostile-path regression tests",
]

[tool.coverage.run]
branch = true
source = ["quantforge"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "S", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["quantforge"]
warn_unreachable = true
